# herder

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  config.example.yaml  config.real.example.yaml  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  providers.md  roadmap.md
docs/adr/: 0001-agent-hub-strategy.md  0002-role-fallback-and-cooldown.md
evals/: README.md  run_pilot.py  scorer.py
evals/cases/: pilot.yaml
launchd/: README.md  ai.herder.worker.plist  herder-worker-launch.sh
src/herder/: __init__.py  adapters.py  backoff.py  cli.py  config.example.yaml  config.py  connect.py  cost.py  doctor.py  env.py  errors.py  ids.py  init_cmd.py  models.py  paths.py  permissions.py  redact.py  registry.py  resources.py  routing.py  runspace.py  transitions.py
tests/: acp_stub_agent.py  conftest.py  test_acp_client.py  test_adapters.py  test_approval_integration.py  test_backoff.py  test_bench.py  test_budget.py  test_cancel_integration.py  test_cli.py  test_cli_approve.py  test_cli_bench.py  test_cli_cancel.py  test_cli_generic.py  test_cli_result_tail.py  test_cli_retry.py  test_cli_worker.py  test_config.py  test_config_runtime.py  test_connect.py  test_cost.py  test_doctor.py  test_enqueue_runtime.py  test_enqueue_service.py  test_env.py  test_errors.py  test_eval_lock.py  test_eval_scorer.py  test_execute.py  test_fallback_integration.py  test_gc.py  test_heartbeat.py  test_ids.py  test_init.py  test_invocation.py  test_launchd_artifacts.py  test_migrations.py  test_ollama_http.py  test_parallel_worker.py  test_parsers.py  (+34 more)
(+32 files in other folders)
